# lex-4i

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GITHUB_PROFILE_POSITIONING.md  GITHUB_REPO_PACKET.md  HUMAN_REVIEW_BOUNDARIES.md  LEGAL_ADVICE_BOUNDARY.md  SAMPLE_MATTER_GUIDE.md  WORKFLOW.md
lex_4i/: __init__.py  chronology.py  cli.py  draft_support.py  evidence_index.py  hashing.py  ingest.py  issue_map.py  models.py  receipts.py  redteam.py  renderers.py  validators.py
outputs/sample_run/: chronology.json  chronology.md  drafting_support_packet.md  evidence_index.json  evidence_index.md  issue_map.json  issue_map.md  matter_receipt.json  matter_receipt.md  missing_info_checklist.md  red_team_report.json  red_team_review.md  unsupported_claims_report.md
receipts/: LEX_4I_GITHUB_PUBLISH_RECEIPT_20260624.md  LEX_4I_GITHUB_READINESS_RECEIPT_20260624.md  LEX_4I_INITIAL_BUILD_RECEIPT_20260624.md  LEX_4I_RENAME_RECEIPT_20260624.md
sample_matter/: README.md  facts.md  intake.md
sample_matter/correspondence/: demand_response.md  email_001.md  email_002.md
sample_matter/drafts/: draft_demand_letter.md
sample_matter/evidence/: policy_excerpt.md  termination_notice.md  timesheet_notes.md  witness_note.md
schemas/: chronology.schema.json  evidence_index.schema.json  issue_map.schema.json  matter.schema.json  receipt.schema.json  red_team_report.schema.json
tests/: test_chronology.py  test_evidence_index.py  test_ingest.py  test_issue_map.py  test_positioning.py  test_receipt.py  test_redteam.py
